--- a/public/doctor-dashboard.html
+++ b/public/doctor-dashboard.html
@@ -105,6 +105,11 @@
             <p>Set deadlines for assignments, exams, and projects.</p>
             <a href="/add-deadline.html">Add Deadline</a>
         </div>
+        <div class="card">
+            <h3>Add Quiz</h3>
+            <p>Create quizzes for your course materials.</p>
+            <a href="/create-quiz.html">Add Quiz</a>
+        </div>
         
     </div>
     <div class="footer">
