--- a/public/course-materials.html
+++ b/public/course-materials.html
@@ -224,6 +224,53 @@ async function updateProgress(userId, courseId, materialId, materialType) {
         alert('An error occurred while updating progress.');
     }
 }
+async function loadQuiz(material_id) {
+    const response = await fetch(`/quiz/${material_id}`);
+    const questions = await response.json();
+    
+    let quizHTML = "";
+    questions.forEach((q, index) => {
+        quizHTML += `<p>${index + 1}. ${q.question_text}</p>`;
+        q.options.forEach(option => {
+            quizHTML += `<label>
+                <input type="radio" name="q${q.question_id}" value="${option.option_id}">
+                ${option.option_text}
+            </label><br>`;
+        });
+    });
+
+    document.getElementById("quiz-container").innerHTML = quizHTML;
+}
+
+async function submitQuiz(user_id, quiz_id) {
+    const answers = [];
+    document.querySelectorAll("input[type=radio]:checked").forEach(input => {
+        answers.push({ question_id: input.name.substring(1), selected_option: input.value });
+    });
+
+    const response = await fetch("/submit-quiz", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ user_id, quiz_id, answers }),
+    });
+
+    if (response.ok) {
+        alert("Quiz submitted! Fetching feedback...");
+        loadFeedback(user_id, quiz_id);
+    }
+}
+
+async function loadFeedback(user_id, quiz_id) {
+    const response = await fetch(`/quiz-feedback/${user_id}/${quiz_id}`);
+    const feedback = await response.json();
+    
+    let feedbackHTML = "<h3>Recommended Lectures:</h3>";
+    feedback.forEach(f => {
+        feedbackHTML += `<p>${f.feedback_text} - <a href="${f.material_link}">${f.material_name}</a></p>`;
+    });
+
+    document.getElementById("feedback-container").innerHTML = feedbackHTML;
+}
 
 
 
