--- a/public/admin.html
+++ b/public/admin.html
@@ -107,6 +107,12 @@
             <!-- Updated Link for Manage Users -->
             <a href="/manage-users">Manage Users</a>
         </div>
+        <div class="card">
+            <h3>Enrollment requests</h3>
+            <p>accept and decline requests</p>
+            <!-- Updated Link for Manage Users -->
+            <a href="/enrollment-requests.html">enrollment requests</a>
+        </div>
     </div>
     <div class="footer">
         <p>© 2024 E-Learning Platform. Admin Dashboard.</p>
